--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.9",
+        "@types/vue-select": "^3.16.2",
         "@types/ziggy-js": "^1.3.2",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vue/server-renderer": "^3.2.31",
@@ -29,5 +30,9 @@
         "vite": "^4.0.0",
         "vue": "^3.2.41",
         "vue-tsc": "^1.2.0"
+    },
+    "dependencies": {
+        "fuse.js": "^6.6.2",
+        "vue-select": "^4.0.0-beta.6"
     }
 }
