--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
+        "@quasar/vite-plugin": "^1.4.1",
         "@types/ziggy-js": "^1.3.2",
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.12",
@@ -14,9 +15,14 @@
         "laravel-vite-plugin": "^0.7.5",
         "moment": "^2.29.4",
         "pinia": "^2.1.3",
+        "sass": "^1.32.12",
         "typescript": "^5.0.2",
         "vite": "^4.0.0",
         "vue": "^3.2.41",
         "vue-tsc": "^1.2.0"
+    },
+    "dependencies": {
+        "@quasar/extras": "^1.16.5",
+        "quasar": "^2.12.3"
     }
 }
