--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@quasar/vite-plugin": "^1.4.1",
+        "@types/luxon": "^3.3.1",
         "@types/ziggy-js": "^1.3.2",
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.12",
@@ -23,6 +24,7 @@
     },
     "dependencies": {
         "@quasar/extras": "^1.16.5",
+        "luxon": "^3.3.0",
         "quasar": "^2.12.3"
     }
 }
