--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
         "@dicebear/collection": "^6.0.4",
         "@dicebear/core": "^6.0.4",
         "@quasar/extras": "^1.16.5",
+        "export-from-json": "^1.7.3",
+        "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.5.31",
         "luxon": "^3.3.0",
         "quasar": "^2.12.3"
     }
